public class Being {
    int strength;
    String name;
}